--- a/FHR.xcodeproj/xcshareddata/xcschemes/FHR.xcscheme
+++ b/FHR.xcodeproj/xcshareddata/xcschemes/FHR.xcscheme
@@ -51,6 +51,56 @@
                BlueprintName = "FHRTests"
                ReferencedContainer = "container:FHR.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "TimerTests">
+               </Test>
+               <Test
+                  Identifier = "ViewControllerTests">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest/testAddDurationWorkout()">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest/testAddIntervalWorkout()">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest/testAddRepsWorkout()">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest/testFetchLatestWorkout()">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest/testFetchLatestWorkoutNoWorkoutsPerformed()">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest/testFetchPrebensWorkouts()">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest/testFetchWarmup()">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest/testFetchWarmupWithUserWorkout()">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest/testFetchWorkout()">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest/testFetchWorkoutDryGround()">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest/testLoadDatabase()">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest/testSaveUserWorkout()">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest/testUpdateUserWorkout()">
+               </Test>
+               <Test
+                  Identifier = "WorkoutTypeTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
