--- a/FHR.xcodeproj/xcshareddata/xcschemes/FHR.xcscheme
+++ b/FHR.xcodeproj/xcshareddata/xcschemes/FHR.xcscheme
@@ -51,6 +51,23 @@
                BlueprintName = "FHRTests"
                ReferencedContainer = "container:FHR.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "RuntimeWorkoutTests">
+               </Test>
+               <Test
+                  Identifier = "TimerTests">
+               </Test>
+               <Test
+                  Identifier = "ViewControllerTests">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest">
+               </Test>
+               <Test
+                  Identifier = "WorkoutTypeTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
