--- a/FHS.xcodeproj/xcshareddata/xcschemes/FHS.xcscheme
+++ b/FHS.xcodeproj/xcshareddata/xcschemes/FHS.xcscheme
@@ -3,7 +3,7 @@
    LastUpgradeVersion = "0600"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "YES"
+      parallelizeBuildables = "NO"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
