Adding remote vidoe urls.

--- a/FHS/Info.plist
+++ b/FHS/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>VideoUrl</key>
+	<string>http://fhs.dbevenius.org/</string>
 </dict>
 </plist>
