Adding testing store.

--- a/FHS.xcodeproj/xcshareddata/xcschemes/FHS.xcscheme
+++ b/FHS.xcodeproj/xcshareddata/xcschemes/FHS.xcscheme
@@ -51,6 +51,17 @@
                BlueprintName = "FHSTests"
                ReferencedContainer = "container:FHS.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "CoreDataStackTest/testListStoresNames()">
+               </Test>
+               <Test
+                  Identifier = "CoreDataStackTest/testNewStore()">
+               </Test>
+               <Test
+                  Identifier = "WorkoutServiceTest/testCreateTestStore()">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
